--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,27 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/main_background"
-    android:windowSoftInputMode="stateVisible|adjustPan">
+    android:background="@drawable/main_background">
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="413dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_marginTop="60dp"
+        android:layout_weight="1"
         android:background="#00854848"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:scrollbarSize="3dp"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical"
+        android:scrollingCache="true"
+        android:smoothScrollbar="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/fieldSearch"
         style="@android:style/Widget.EditText"
-        android:layout_width="385dp"
+        android:layout_width="fill_parent"
         android:layout_height="49dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
