--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_login.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
+    tools:context=".activities.LoginActivity"
     android:background="@drawable/sign_background">
 
     <LinearLayout
@@ -29,7 +29,7 @@
             android:hint="E-Mail"
             android:inputType="textEmailAddress"
             android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF" />
+            android:textColorHint="#B4B4B4" />
 
         <EditText
             android:id="@+id/editPassword"
@@ -41,7 +41,7 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF" />
+            android:textColorHint="#B4B4B4" />
 
         <Button
             android:id="@+id/buttonLogin"
