--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_register.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_register.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
+    tools:context=".activities.RegisterActivity"
     android:background="@drawable/sign_background">
 
     <LinearLayout
         android:layout_width="240dp"
-        android:layout_height="180dp"
+        android:layout_height="222dp"
         android:background="@drawable/layout_bg"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/accountText"
@@ -19,20 +19,33 @@
         app:layout_constraintVertical_bias="0.600">
 
         <EditText
-            android:id="@+id/editEmail"
+            android:id="@+id/editNickname"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:backgroundTint="#FFFFFF"
             android:ems="10"
+            android:hint="Nickname"
+            android:inputType="textPersonName"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#B4B4B4" />
+
+        <EditText
+            android:id="@+id/editEmail"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:backgroundTint="#FFFFFF"
+            android:ems="10"
             android:hint="E-Mail"
             android:inputType="textEmailAddress"
             android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF" />
+            android:textColorHint="#B4B4B4" />
 
         <EditText
             android:id="@+id/editPassword"
+            style="@style/Widget.AppCompat.EditText"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -41,7 +54,7 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF" />
+            android:textColorHint="#B4B4B4" />
 
         <Button
             android:id="@+id/buttonRegister"
@@ -50,6 +63,10 @@
             android:layout_marginLeft="70dp"
             android:layout_marginTop="10dp"
             android:text="Register" />
+
+
+
+
     </LinearLayout>
 
     <TextView
