--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/adapter_view_layout.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/adapter_view_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#390C0025"
     android:orientation="horizontal"
-    tools:context=".MainActivity"
+    tools:context=".activities.MainActivity"
     android:id="@+id/song_layout">
 
     <ImageView
@@ -19,7 +19,6 @@
         android:scaleType="centerInside"
         android:scaleX="0.8"
         android:scaleY="0.8"
-        android:text="Ебаный рот этого казино блять"
         android:textAlignment="center"
         app:srcCompat="@mipmap/ic_launcher" />
 
@@ -35,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="bottom|center|left"
-            android:text="Ты кто такой сука"
+            android:text="Ты кто такой"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
 
