--- a/AndroidStudioProjects/MeloJin/app/src/main/res/values/colors.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="songSelectBackground">#72000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="zalupa">#390C0025</color>
 </resources>
