--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,46 @@
     tools:context=".activities.MainActivity"
     android:background="@drawable/main_background">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryMiddle"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/search_layout"
+            android:scaleX="0.95"
+            android:scaleY="0.75">
+
+            <EditText
+                android:id="@+id/fieldSearch"
+                style="@android:style/Widget.EditText"
+                android:layout_marginTop="5dp"
+                android:layout_width="fill_parent"
+                android:layout_height="49dp"
+                android:layout_marginLeft="16dp"
+                android:background="@android:color/transparent"
+                android:backgroundTint="#FFFFFF"
+                android:ems="10"
+                android:hint="Search"
+                android:inputType="textPersonName"
+                android:scaleY="1.2"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                app:layout_constraintBottom_toTopOf="@+id/listView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="fill_parent"
@@ -22,26 +62,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/fieldSearch"
-        style="@android:style/Widget.EditText"
-        android:layout_width="fill_parent"
-        android:layout_height="49dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="9dp"
-        android:backgroundTint="#FFFFFF"
-        android:ems="10"
-        android:hint="Search"
-        android:inputType="textPersonName"
-        android:textColor="#00FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
