--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="vertical"
-        android:background="@color/colorPrimaryMiddle"
-        >
+        android:background="@color/colorPrimaryMiddle">
 
         <LinearLayout
             android:layout_width="match_parent"
