lots of new added

--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,8 @@
         android:scrollingCache="true"
         android:smoothScrollbar="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:longClickable="true"/>
 
 
 
