--- a/AndroidStudioProjects/MeloJin/app/src/main/res/menu/drawer_menu.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/menu/drawer_menu.xml
@@ -5,18 +5,36 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_profile"
-            android:title="My Profile" />
+            android:id="@+id/nav_allmusic"
+            android:icon="@drawable/ic_search"
+            android:title="All Music" />
+
         <item
             android:id="@+id/nav_music"
             android:icon="@drawable/ic_music_storage"
             android:title="My Music" />
-        <item
-            android:id="@+id/nav_friends"
-            android:icon="@drawable/ic_friends"
-            android:title="Friends" />
+
+
     </group>
+
+    <item android:title="Social">
+        <menu>
+            <item
+                android:id="@+id/nav_profile"
+                android:icon="@drawable/ic_profile"
+                android:title="My Profile" />
+
+            <item
+                android:id="@+id/nav_friends"
+                android:icon="@drawable/ic_friends"
+                android:title="Friends" />
+
+            <item
+                android:id="@+id/nav_allusers"
+                android:icon="@drawable/ic_people_outline"
+                android:title="All Users"/>
+        </menu>
+    </item>
 
     <item android:title="Account settings">
         <menu>
