--- a/AndroidStudioProjects/MeloJin/app/src/main/res/values/colors.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="songSelectBackground">#72000000</color>
     <color name="white">#FFFFFF</color>
     <color name="zalupa">#390C0025</color>
+    <color name="userAdapter">#D012151E</color>
 </resources>
