--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_song.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_song.xml
@@ -132,11 +132,12 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal"
-        android:weightSum="3">
+        android:weightSum="10">
 
         <ImageButton
             android:id="@+id/del_song"
-            android:layout_weight="1"
+            android:layout_marginLeft="30dp"
+            android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:src="@drawable/ic_delete_black_24dp"
@@ -145,7 +146,7 @@
             android:background="@null" />
 
         <ImageButton
-            android:layout_weight="1"
+            android:layout_weight="6"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:scaleY="2"
@@ -154,7 +155,8 @@
 
         <ImageButton
             android:id="@+id/rep_song"
-            android:layout_weight="1"
+            android:layout_marginRight="30dp"
+            android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:src="@drawable/ic_loop"
