--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_song.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_song.xml
@@ -92,7 +92,15 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:orientation="horizontal"
-            android:weightSum="3">
+            android:weightSum="7">
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
 
             <ImageButton
                 android:id="@+id/skip_prev"
@@ -105,6 +113,14 @@
                 android:src="@drawable/ic_skip_previous"/>
 
             <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
+
+            <ImageButton
                 android:id="@+id/play_pause"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -115,6 +131,14 @@
                 android:src="@drawable/ic_play_arrow"/>
 
             <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
+
+            <ImageButton
                 android:id="@+id/skip_next"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -123,6 +147,14 @@
                 android:scaleY="2"
                 android:background="@null"
                 android:src="@drawable/ic_skip_next" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
 
         </LinearLayout>
 
