--- a/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_song.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/layout/activity_song.xml
@@ -158,44 +158,75 @@
 
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal"
-        android:weightSum="10">
-
-        <ImageButton
-            android:id="@+id/del_song"
-            android:layout_marginLeft="30dp"
-            android:layout_weight="2"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:src="@drawable/ic_delete_black_24dp"
-            android:scaleY="1.25"
-            android:scaleX="1.25"
-            android:background="@null" />
+            android:orientation="horizontal"
+            android:weightSum="7">
 
-        <ImageButton
-            android:layout_weight="6"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:scaleY="2"
-            android:scaleX="2"
-            android:background="@null" />
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
 
-        <ImageButton
-            android:id="@+id/rep_song"
-            android:layout_marginRight="30dp"
-            android:layout_weight="2"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_loop"
-            android:scaleY="1.25"
-            android:scaleX="1.25"
-            android:background="@null"
-            android:layout_gravity="center"/>
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/del_song"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="1.7"
+                android:scaleY="1.7"
+                android:background="@null"
+                android:src="@drawable/ic_delete_black_24dp"/>
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
+
+            <ImageButton
+                android:id="@+id/rep_song"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="1.7"
+                android:scaleY="1.7"
+                android:background="@null"
+                android:src="@drawable/ic_loop" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:background="@null"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
